--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -8,7 +8,7 @@ BASECODENAME="artful"
 BASEVERSION="17.10"
 
 # distribution codename
-CODENAME="artful-unity"
+CODENAME="unity-remix"
 
 # distribution version
 VERSION="17.10"
